@@ -25,9 +25,20 @@ tasks.named<Javadoc>("javadoc") {
 }
 
 val nativeJniLibraryPath = providers.systemProperty("org.maplibre.nativejni.library.path")
+val nativeJniLibraryEnv = providers.environmentVariable("MAPLIBRE_NATIVE_JNI_LIBRARY_PATH")
+val javaLibraryPath = providers.systemProperty("java.library.path")
+val requireNativeTests = providers.systemProperty("org.maplibre.nativejni.tests.requireNative")
 
 tasks.withType<Test>().configureEach {
   useJUnitPlatform()
+  jvmArgs("--enable-native-access=ALL-UNNAMED")
   inputs.property("org.maplibre.nativejni.library.path", nativeJniLibraryPath.orElse(""))
+  inputs.property("MAPLIBRE_NATIVE_JNI_LIBRARY_PATH", nativeJniLibraryEnv.orElse(""))
+  inputs.property("java.library.path", javaLibraryPath.orElse(""))
+  inputs.property("org.maplibre.nativejni.tests.requireNative", requireNativeTests.orElse(""))
   nativeJniLibraryPath.orNull?.let { systemProperty("org.maplibre.nativejni.library.path", it) }
+  javaLibraryPath.orNull?.let { systemProperty("java.library.path", it) }
+  requireNativeTests.orNull?.let {
+    systemProperty("org.maplibre.nativejni.tests.requireNative", it)
+  }
 }
